kubernetes/app-spa-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-spa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-spa
  template:
    metadata:
      labels:
        app: app-spa
    spec:
      containers:
        - image: app_spa:1
          name: app-spa
      restartPolicy: Always
