kubernetes/app-spa-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-spa
  name: app-spa
spec:
  ports:
    - nodePort: 30945
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: app-spa
  type: LoadBalancer
