kubernetes/app-spa-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-spa
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: app-spa
  type: NodePort
